# twitch-archiver

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  pypi-publish-on-release.yml
tests/unit/: test_processing.py  test_video.py
twitcharchiver/: __main__.py  processing.py
twitcharchiver/downloaders/: video.py
